# courier

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  idf_component.yml  library.json
.github/workflows/: ci.yml  publish.yml
docs/: api.md  changelog.md  migration-0.3-to-0.4.md  publishing.md
docs/superpowers/plans/: 2026-04-09-test-suite-ci.md
docs/superpowers/specs/: 2026-04-09-test-suite-ci-design.md
examples/basic-websocket/: basic-websocket.ino
examples/espidf-basic/: partitions.csv  sdkconfig.defaults
examples/espidf-basic/main/: CMakeLists.txt  idf_component.yml  main.cpp
examples/espidf-basic/tools/: fetch-arduino-deps.sh
examples/gemini-speech-to-speech/: README.md
examples/gemini-speech-to-speech/device/: platformio.ini
examples/gemini-speech-to-speech/device/src/: main.cpp
examples/gemini-speech-to-speech/server/: .dev.vars.example  env.d.ts  package.json  tsconfig.json  wrangler.jsonc
examples/gemini-speech-to-speech/server/src/: server.ts
examples/m5stick-demo/: README.md
examples/m5stick-demo/device/: platformio.ini
examples/m5stick-demo/device/src/: main.cpp
examples/m5stick-demo/server/: .gitignore  env.d.ts  index.html  package-lock.json  package.json
examples/m5stick-demo/server/src/: app.tsx  server.ts
examples/mqtt-pubsub/: idf_component.yml  mqtt-pubsub.ino
src/: Courier.cpp  Courier.h  CourierEndpoint.h  CourierMqttTransport.cpp  CourierMqttTransport.h  CourierSpscQueue.h  CourierTransport.h  CourierUDPTransport.cpp  CourierUDPTransport.h  CourierWSTransport.cpp  CourierWSTransport.h  Endpoint.h  MqttTransport.cpp  MqttTransport.h  SpscQueue.h  Transport.h  UdpTransport.cpp  UdpTransport.h  WebSocketTransport.cpp  WebSocketTransport.h
test/build-platformio/basic-websocket/: platformio.ini
test/build-platformio/gemini-speech-to-speech/: platformio.ini
test/build-platformio/m5stick-demo/: platformio.ini
test/build-platformio/mqtt-pubsub/: platformio.ini
test/mocks/: Arduino.h  HTTPClient.h  WiFi.h  WiFiClientSecure.h  WiFiManager.h  esp_websocket_client.h  ezTime.cpp  ezTime.h  mqtt_client.h
test/unit/: platformio.ini
test/unit/lib/courier/: Courier.cpp  Courier.h  CourierEndpoint.h  CourierMqttTransport.cpp  CourierMqttTransport.h  CourierSpscQueue.h  CourierTransport.h  CourierWSTransport.cpp  CourierWSTransport.h  Endpoint.h  MqttTransport.cpp  MqttTransport.h  SpscQueue.h  Transport.h  WebSocketTransport.cpp  WebSocketTransport.h  library.json
test/unit/lib/mocks/: Arduino.cpp  Arduino.h  HTTPClient.h  WiFi.cpp  WiFi.h  WiFiClientSecure.h  WiFiManager.h  esp_websocket_client.h  ezTime.cpp  ezTime.h  library.json  mqtt_client.h
test/unit/test/test_client/: test_client.cpp
test/unit/test/test_courier/: test_courier.cpp
test/unit/test/test_mqtt_transport/: test_mqtt_transport.cpp
test/unit/test/test_spsc_queue/: test_spsc_queue.cpp
test/unit/test/test_websocket_transport/: test_websocket_transport.cpp
test/unit/test/test_ws_transport/: test_ws_transport.cpp
tools/: publish-preflight.py  run-tests.py
